@@ -638,6 +638,7 @@ wxMSW:
 - Fix crash when adding/removing the same path to/from wxFileSystemWatcher.
 - Draw "classic" disabled owner drawn buttons better (Artur Wieczorek).
 - Fix width of the vertical toolbars (Artur Wieczorek).
+- Fix handling of controls in the vertical toolbars (Artur Wieczorek).
 - Fix loading of top to bottom BMP files in wxBitmap (Artur Wieczorek).
 
 wxOSX:
